@startuml
!theme mars

'https://plantuml.com/class-diagram

enum SolveStep {
    ALL
    L1x
    L1
    L2
    L3
    L3x
    NxNCenters
    NxNEdges
}

class SolverResults {
    was_corner_swap: bool
    was_even_edge_parity: bool
    was_partial_edge_parity: bool
}

class ReductionResults {
    partial_edge_parity_detected: bool
}

' ============ PROTOCOLS ============

interface SolverElementsProvider <<protocol>> {
    {abstract} op: OperatorProtocol
    {abstract} cube: Cube
    {abstract} cmn: CommonOp
    {abstract} debug(*args): None
}

interface ReducerProtocol <<protocol>> {
    {abstract} op: OperatorProtocol
    {abstract} is_reduced(): bool
    {abstract} reduce(): ReductionResults
    {abstract} fix_edge_parity(): None
    {abstract} fix_corner_parity(): None
}

interface Solver3x3Protocol <<protocol>> {
    {abstract} solve(what: SolveStep): SolverResults
    {abstract} is_solved: bool
    {abstract} status: str
    {abstract} op: OperatorProtocol
}

' ============ SOLVERS ============

abstract class BaseSolver {
    _op: OperatorProtocol
    _cmn: CommonOp
    {abstract} get_code: SolverName
}

class BeginnerSolver3x3
class CFOP3x3
class Kociemba3x3

' BaseSolver implements SolverElementsProvider
SolverElementsProvider <|.. BaseSolver

' Solvers extend BaseSolver
BaseSolver <|-- BeginnerSolver3x3
BaseSolver <|-- CFOP3x3
BaseSolver <|-- Kociemba3x3

Solver3x3Protocol <|.. BeginnerSolver3x3
Solver3x3Protocol <|.. CFOP3x3
Solver3x3Protocol <|.. Kociemba3x3

Solver3x3Protocol ..> SolveStep : uses
Solver3x3Protocol ..> SolverResults : returns

' ============ REDUCERS ============

abstract class AbstractReducer {
    _op: OperatorProtocol
    _cube: Cube
    _cmn: CommonOp
}

class BeginnerReducer {
    _nxn_centers: NxNCenters
    _nxn_edges: NxNEdges
    _l3_corners: L3Corners
}

' AbstractReducer implements both protocols
SolverElementsProvider <|.. AbstractReducer
ReducerProtocol <|.. AbstractReducer

' BeginnerReducer extends AbstractReducer
AbstractReducer <|-- BeginnerReducer

ReducerProtocol ..> ReductionResults : returns

' ============ SOLVER ELEMENTS ============

abstract class SolverHelper {
    _solver: SolverElementsProvider
    _cmn: CommonOp
    _ann: AnnotationProtocol
}

' SolverHelper uses SolverElementsProvider (composition)
SolverHelper o-- SolverElementsProvider : uses

class CommonOp {
    _slv: SolverElementsProvider
}

CommonOp o-- SolverElementsProvider : uses

SolverHelper <|-- L1Cross
SolverHelper <|-- L1Corners
SolverHelper <|-- L2
SolverHelper <|-- L3Cross
SolverHelper <|-- L3Corners
SolverHelper <|-- NxNCenters
SolverHelper <|-- NxNEdges
SolverHelper <|-- OLL
SolverHelper <|-- PLL

' ============ COMPOSITION ============

BeginnerSolver3x3 *-- CommonOp
BeginnerSolver3x3 *-- L1Cross
BeginnerSolver3x3 *-- L1Corners
BeginnerSolver3x3 *-- L2
BeginnerSolver3x3 *-- L3Cross
BeginnerSolver3x3 *-- L3Corners

BeginnerReducer *-- NxNCenters
BeginnerReducer *-- NxNEdges
BeginnerReducer *-- L3Corners

note right of SolverElementsProvider
  Minimal interface that SolverHelper
  and CommonOp need. Implemented by
  both BaseSolver and AbstractReducer.
end note

note right of AbstractReducer
  Base class for reducers that provides
  SolverElementsProvider interface.
  Eliminates need for facade classes.
end note

@enduml
